pkl-core/src/test/files/LanguageSnippetTests/input/errors/letExpressionErrorTyped.pkl
res1 =
  let (x: Float = "abc")
    x.reverse()
